--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "inquirer": "^8.2.4"
