adding console.tab depend and testing prompts

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "console.table": "^0.10.0"
   },
   "bugs": {
     "url": "https://github.com/archonology/Employee-Library/issues"
